# mops

./: .gitignore  CLAUDE.md  pyproject.toml  sample.py  sample_simplified.py
conf/: extract.yaml
conf/model/: sd14.yaml  sd21.yaml
src/mops/: extract.py  processor.py  stats_store.py  token_utils.py
